# workflow_model

./: .gitignore  README.md  environment-cu118.yml  pyproject.toml  requirements-cu118.txt  requirements-dev-cu118.txt  requirements-dev.txt  requirements.txt
.github/workflows/: build-windows-exe.yml
config/: runtime.example.yaml  runtime.linux.example.yaml  runtime.qwen3.5-9b.local.example.yaml
prompts/: beam_track_prompt.txt
src/app/: cli.py  config.py  infer.py  io_utils.py  model_loader.py  track_match.py  types.py
tests/: test_config.py  test_infer.py  test_track_match.py
